<resources>
    <string name="app_name">HandsUp</string>
    <string name="play">Play</string>
    <string name="rules_layout_rules">Теперь тебе и твоим друзьям не придется скучать, потому что у тебя есть Hands Up – соревновательная игра для компании!
        Нужно объяснить и угадать как можно больше выражений за короткое время.
        Один игрок угадывает – остальные объясняют, а потом меняются.
        Выбери категорию, приложи телефон к своему лбу, на экране появится слово. Твои друзья должны будут объяснять слово, а ты пытаться угадать. Если угадал – наклони телефон экраном вниз. Ну а если ты не угадал слово, тогда наклони телефон экраном вверх
    </string>
    <string name="rules_title">Правила</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Настройки</string>
    <string name="menu">Меню</string>
    <string name="PlayTime">ВРЕМЯ ИГРЫ</string>
    <string name="sixtySecond">60s</string>
    <string name="ninetySecond">90s</string>
    <string name="oneHundredAndTwelveSecond">120s</string>
    <string name="results">Результаты</string>
    <string name="save">Сохранить</string>
    <string name="nextButton">Далее</string>
    <string name="backButton">Назад</string>
    <string name="useAccelerometer">Использовать Акселерометр</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="retry">Повторить</string>
    <string name="right">Правильно</string>
    <string name="miss">Неверно</string>
</resources>