<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="117dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/white_bg"
        android:gravity="center"
        android:text="@string/useAccelerometer"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playTimeRadioGroup"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.224" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="fill_parent"
        android:layout_height="134dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top_rules_layout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.339" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="fill_parent"
        android:layout_height="455dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottom_settings_fragment" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_menu_button"
        android:onClick="saveSetting"
        android:text="@string/save"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="364dp"
        android:layout_height="369dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/menuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/two_hunds_on_setting_fragment" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="117dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/white_bg"
        android:gravity="center"
        android:text="@string/PlayTime"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playTimeRadioGroup"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.305" />

    <RadioGroup
        android:id="@+id/playTimeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301">

        <RadioButton
            android:id="@+id/sixtySecond"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:checked="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_radio_selecter"
            android:button="@color/white"
            android:text="@string/sixtySecond"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/ninetySecond"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_radio_selecter"
            android:button="@color/white"
            android:text="@string/ninetySecond"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/oneHundredTwelveSecond"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_radio_selecter"
            android:button="@color/white"
            android:textColor="@color/white"
            android:text="@string/oneHundredAndTwelveSecond"
            android:textAlignment="center" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/isAccelerometerUsed"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22">

        <RadioButton
            android:id="@+id/yesUseAccelerometr"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_radio_selecter"
            android:button="@color/white"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/noDontUseAccelerometr"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_radio_selecter"
            android:button="@color/white"
            android:checked="true"
            android:text="@string/no"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>